# NativeJIT

./: .doozer.json  .gitignore  .travis.yml  Allocator.cpp  Allocator.h  Binary.h  BinaryNode.h  CMakeLists.txt  CMakeLists.txt.in  ConditionalNode.cpp  ConditionalNode.h  Configure_Linux_Make.sh  Configure_Linux_Make_clang.sh  Configure_Linux_Make_gcc.sh  Configure_MSVC.bat  Configure_Make.bat  Configure_Make.sh  Configure_MinGW64_clang.bat  Configure_MinGW64_gcc.bat  Configure_Ninja.sh  Configure_OSX_Make.sh  Configure_OSX_XCode.sh  Configure_Windows.bat  Configure_Windows_MSVC.bat  Configure_XCode.sh  CoreXt.Cpp.x64.props  Dispatch.h.old  Examples.cpp  Examples.h  ExpressionNodeFactory.cpp  ExpressionNodeFactory.h  ExpressionTree.cpp  ExpressionTree.h  FieldPointer.h  FieldPointerNode.h  Function.cpp  Function.h  Immediate.h  ImmediateNode.h  Indirect.h  (+28 more)
CodeGen/: CodeGen.vcxproj  CodeGen.vcxproj.filters  stdafx.cpp
Documentation/: README.md  add_opcode.md
Examples/: CMakeLists.txt  README.md
Examples/AreaOfCircle/: AreaOfCircle.cpp  CMakeLists.txt
Examples/Calculator/: CMakeLists.txt  Calculator.cpp
Examples/Functional/: CMakeLists.txt  Functional.cpp  README.md
Examples/Parser/: CMakeLists.txt  Parser.cpp  README.md
NativeJIT/: BinaryNode.h  CallNode.h  ConditionalNode.cpp  Examples.h  FieldPointerNode.h  IAllocator.h  ImmediateNode.h  NativeJIT.vcxproj  NativeJIT.vcxproj.filters  ParameterNode.h  TypePredicates.h
UnitTest/CodeGenUnitTest/: BitOperationsUnitTest.cpp  CMakeLists.txt  CodeGenUnitTest.cpp  CodeGenUnitTest.vcxproj  CodeGenUnitTest.vcxproj.filters  FunctionBufferUnitTest.cpp  InstructionEncodingUnitTest.cpp  ML64Verifier.cpp  ML64Verifier.h  dllmain.cpp  stdafx.cpp  stdafx.h
UnitTest/NativeJITUnitTest/: BitFunnelAcceptanceTest.cpp  CMakeLists.txt  CastUnitTest.cpp  ConditionalAutoGenUnitTest.cpp  ConditionalUnitTest.cpp  ExpressionTreeUnitTest.cpp  FloatingPointUnitTest.cpp  FunctionUnitTest.cpp  NativeJITUnitTest.cpp  NativeJITUnitTest.vcxproj  NativeJITUnitTest.vcxproj.filters  PackedUnitTest.cpp  Temporary.cpp  UnsignedUnitTest.cpp  dllmain.cpp  stdafx.cpp  stdafx.h
UnitTest/Shared/: CMakeLists.txt  Shared.vcxproj  Shared.vcxproj.filters  TestSetup.cpp  TestSetup.h  stdafx.cpp  stdafx.h
inc/: README.md
inc/NativeJIT/: AllocatorVector.h  BitOperations.h  CallingConvention.h  CodeBuffer.h  CodeGenHelpers.h  ExecutionBuffer.h  ExecutionBuffer_POSIX.h  ExecutionBuffer_Windows.h  ExecutionPreconditionTest.h  ExpressionNodeFactory.h  ExpressionNodeFactoryDecls.h  ExpressionTree.h  ExpressionTreeDecls.h  Function.h  FunctionBuffer.h  FunctionBuffer_Windows.h  FunctionSpecification.h  JumpTable.h  Model.h  Packed.h  README.md  Register.h  TypeConverter.h  TypePredicates.h  ValuePredicates.h  X64CodeGenerator.h
inc/NativeJIT/CodeGen/: CallingConvention.h  CodeBuffer.h  ExecutionBuffer.h  FunctionBuffer.h  FunctionSpecification.h  JumpTable.h  Register.h  ValuePredicates.h  X64CodeGenerator.h
inc/NativeJIT/CodeGen/POSIX/: FunctionBuffer.h  FunctionSpecification.h
inc/NativeJIT/CodeGen/Windows/: FunctionBuffer.h  FunctionSpecification.h
inc/NativeJIT/Nodes/: BinaryImmediateNode.h  BinaryNode.h  CallNode.h  CastNode.h  ConditionalNode.h  DependentNode.h  FieldPointerNode.h  ImmediateNode.h  ImmediateNodeDecls.h  IndirectNode.h  Node.h  PackedMinMaxNode.h  ParameterNode.h  ReturnNode.h  ShldNode.h  StackVariableNode.h
inc/Temporary/: Allocator.h  AllocatorOperations.h  Assert.h  IAllocator.h  NonCopyable.h  README.md  StlAllocator.h
src/Assembler/: Assembler.vcxproj  Assembler.vcxproj.filters  GenerateModRMTest.ps1  InstructionEncoding.asm  TestAsm.asm  TestAsm.lst  asm.bat  asmAndFormat.ps1
src/CodeGen/: Allocator.cpp  Assert.cpp  BitOperations.cpp  CMakeLists.txt  CodeBuffer.cpp  CodeBuffer.h  CodeGen.vcxproj  CodeGen.vcxproj.filters  ExecutionBuffer.cpp  ExecutionBuffer.h  ExecutionBufferInternal.h  ExecutionBuffer_POSIX.cpp  ExecutionBuffer_Windows.cpp  FunctionBuffer.cpp  FunctionBuffer.h  FunctionBuffer_POSIX.cpp  FunctionBuffer_Windows.cpp  FunctionSpecification.cpp  JumpTable.cpp  JumpTable.h  Register.cpp  Test.cpp  UnwindCode.cpp  UnwindCode.h  UnwindCode_Windows.cpp  UnwindCode_Windows.h  ValuePredicates.cpp  X64CodeGenerator.cpp  stdafx.cpp  stdafx.h
src/CodeGen/POSIX/: FunctionBuffer.cpp  FunctionSpecification.cpp  UnwindCode.cpp  UnwindCode.h  stdafx.h
src/CodeGen/Windows/: ExecutionBuffer.cpp  FunctionBuffer.cpp  FunctionSpecification.cpp  UnwindCode.h  stdafx.h
src/NativeJIT/: Allocator.cpp  Assert.h  BinaryImmediateNode.h  BinaryNode.h  BitOperations.cpp  CMakeLists.txt  CallNode.cpp  CallNode.h  CallNode2.h  CastNode.h  CodeGenHelpers.h  ConditionalNode.h  Examples.cpp  Examples.h  ExecutionPreconditionTest.h  ExpressionNodeFactory.cpp  ExpressionNodeFactory.h  ExpressionNodeFactory2.cpp  ExpressionNodeFactory2.h  ExpressionTree-Old.cpp  ExpressionTree-Old.h  ExpressionTree.cpp  ExpressionTree.h  FieldPointerNode.h  Function.cpp  Function.h  Function2.cpp  Function2.h  ImmediateNode.h  IndirectNode.h  Main.cpp  ModelNode.h  NativeJIT.vcxproj  NativeJIT.vcxproj.filters  Node.cpp  Node.h  PackedMinMaxNode.h  PackedOperations.cpp  ParameterNode.h  ParameterStage.cpp  (+13 more)
src/Scripts/: CondTest.go
test/CodeGen/: BitOperationsTest.cpp  CMakeLists.txt  CodeGenTest.cpp  FunctionBufferTest.cpp  InstructionEncodingTest.cpp  ML64Verifier.cpp  dllmain.cpp
test/CodeGenUnitTest/: CMakeLists.txt  FunctionBufferUnitTest.cpp
test/NativeJIT/: BitFunnelAcceptanceTest.cpp  CMakeLists.txt  CastTest.cpp  ConditionalAutoGenTest.cpp  ConditionalTest.cpp  ExpressionTreeTest.cpp  FloatingPointTest.cpp  FunctionTest.cpp  PackedTest.cpp  UnsignedTest.cpp
test/NativeJITUnitTest/: CMakeLists.txt
test/Shared/: CMakeLists.txt  TestSetup.cpp
